// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tic-Tac-Toe/Board All Circle 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Board All Cross 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Board All Triangles 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Board Mix 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Game Usual 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next Player: 丁
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Tic-Tac-Toe/Square Usual 1`] = `
<button
  className="square"
/>
`;
